--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "webpack": "./node_modules/.bin/webpack",
     "build-prod": "webpack --mode=production",
-    "build-dev": "webpack --mode=development"
+    "build-dev": "webpack --mode=development",
+    "open-server": "webpack-dev-server"
   },
   "keywords": [],
   "author": "json",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
